Visibility fix on logo

--- a/app/assets/stylesheets/template/_header-footer.css.scss
+++ b/app/assets/stylesheets/template/_header-footer.css.scss
@@ -39,6 +39,7 @@
 
 .site-header {
   border-bottom: divider();
+  z-index: 10;
 }
 .site-footer {
   border-top: divider();
